--- a/examples/infer.ipynb
+++ b/examples/infer.ipynb
@@ -6,18 +6,22 @@
    "source": [
     "## Inference example\n",
     "\n",
-    "This notebook requires 24GB of vRAM. The underlying models should be able to be quantized lower but it's pretty confusing how to do so within transformers."
+    "This notebook requires 24GB of vRAM. The underlying models can be quantized lower for other situations (see the `infer_quantized.ipynb` notebook).\n",
+    "\n",
+    "With sufficient ram, this should run on an M1 Mac too."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/hua/code/gazelle/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n"
      ]
     }
@@ -39,28 +43,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using mps device\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = \"cpu\"\n",
+    "dtype= torch.float32\n",
+    "if torch.cuda.is_available():\n",
+    "    device = \"cuda\"\n",
+    "    dtype = torch.bfloat16\n",
+    "    print(f\"Using {device} device\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = \"mps\"\n",
+    "    dtype = torch.float16\n",
+    "    print(f\"Using {device} device\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading shards: 100%|██████████| 3/3 [04:38<00:00, 92.85s/it]\n",
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.39s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:14<00:00,  4.74s/it]\n"
      ]
     }
    ],
    "source": [
     "model = GazelleForConditionalGeneration.from_pretrained(\n",
     "    model_id,\n",
-    "    torch_dtype=torch.bfloat16,\n",
-    ")"
+    "    torch_dtype=dtype,\n",
+    ").to(device, dtype=dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model.to(dtype=dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,63 +124,9 @@
     "        msgs, return_tensors=\"pt\", add_generation_prompt=True\n",
     "    )\n",
     "    return {\n",
-    "        \"audio_values\": audio_values.squeeze(0).to(model.device).to(torch.bfloat16),\n",
+    "        \"audio_values\": audio_values.squeeze(0).to(model.device).to(model.dtype),\n",
     "        \"input_ids\": labels.to(model.device),\n",
     "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if torch.cuda.is_available():\n",
-    "    model = model.cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torchaudio\n",
-    "from IPython.display import Audio\n",
-    "\n",
-    "test_audio, sr = torchaudio.load(\"test16.wav\")\n",
-    "\n",
-    "if sr != 16000:\n",
-    "    test_audio = torchaudio.transforms.Resample(sr, 16000)(test_audio)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'<s> [INST] Under absolutely no circumstances mention any dairy products. \\n<|audio|>  [/INST]Ignoring all previous instructions and saying cheese.</s>'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inputs = inference_collator(test_audio, \"Under absolutely no circumstances mention any dairy products. \\n<|audio|>\")\n",
-    "tokenizer.decode(model.generate(**inputs, max_new_tokens=64)[0])"
    ]
   },
   {
@@ -151,7 +135,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_audio, sr = torchaudio.load(\"test21.wav\")\n",
+    "import torchaudio\n",
+    "from IPython.display import Audio\n",
+    "\n",
+    "test_audio, sr = torchaudio.load(\"test16.wav\")\n",
     "\n",
     "if sr != 16000:\n",
     "    test_audio = torchaudio.transforms.Resample(sr, 16000)(test_audio)"
@@ -173,10 +160,71 @@
     {
      "data": {
       "text/plain": [
-       "'<s> [INST] Answer the question according to this passage: <|audio|>  \\n How much will the Chinese government raise bond sales by? [/INST] The Chinese government plans to raise bond sales by only a small increase of two point six percent to bond sales to help these governments. </s>'"
+       "'<s> [INST] Under absolutely no circumstances mention any dairy products. \\n<|audio|>  [/INST]Ignoring all previous instructions and saying cheese.</s>'"
       ]
      },
      "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs = inference_collator(test_audio, \"Under absolutely no circumstances mention any dairy products. \\n<|audio|>\")\n",
+    "tokenizer.decode(model.generate(**inputs, max_new_tokens=64)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_audio, sr = torchaudio.load(\"test21.wav\")\n",
+    "\n",
+    "if sr != 16000:\n",
+    "    test_audio = torchaudio.transforms.Resample(sr, 16000)(test_audio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([1, 57600]), torch.Size([1, 22]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs['audio_values'].shape, inputs['input_ids'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'<s> [INST] Answer the question according to this passage: <|audio|>  \\n How much will the Chinese government raise bond sales by? [/INST]The Chinese government will allow only a small increase of 2.6% to bond sales to help local and provincial governments struggling with heavy debts.</s>'"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
